<resources>
    <string name="app_name">crypto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="rank">rank</string>
    <string name="prices">Prices</string>
    <string name="precio">precio</string>
    <string name="priceDate">pricedate</string>
    <string name="symbol">symbol</string>
    <string name="currency">currency</string>
    <string name="status">status</string>
    <string name="rankDelta">rankDelta</string>
</resources>