<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="500dp"
    android:layout_marginEnd="15dp"
    android:animateLayoutChanges="true"


    android:padding="2dp"
    app:cardCornerRadius="14sp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"

        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:background="@color/black"

            android:fontFamily="@font/audiowide"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFEA00"

            android:textSize="17sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:outlineAmbientShadowColor="@color/teal_700"
            android:padding="8dp">


            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="255dp"


                android:layout_alignParentStart="true"

                android:layout_alignParentBottom="true"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="0dp"
                android:background="#0C0000"
                android:contentDescription="@string/todo"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                app:srcCompat="@drawable/ic_launcher_background" />



            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"

                android:orientation="vertical">


                <TextView
                    android:id="@+id/precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#143BA3A3"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center"
                    android:text="@string/precio"
                    android:textAlignment="textStart"
                    android:textColor="#090800"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0C3BA39A"

                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/priceDate"

                    android:textAlignment="textStart"
                    android:textColor="#090800"

                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/symbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:textAlignment="textStart"
                    android:text="@string/symbol"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"


                    android:textColor="#090800"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"

                    android:text="@string/rank"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"

                    android:textAlignment="textStart"
                    android:textColor="#090800"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"

                    android:text="@string/currency"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"

                    android:textAlignment="textStart"
                    android:textColor="#090800"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"

                    android:text="@string/status"
                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"

                    android:textAlignment="textStart"
                    android:textColor="#090800"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rankDelta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"

                    android:fontFamily="@font/audiowide"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/rankDelta"

                    android:textAlignment="textStart"
                    android:textColor="#090800"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_share"
                    android:layout_gravity="center"
                    android:text="share to : gmail"
                    android:textColor="@color/dividirColor"
                    />


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>